--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.3",
+    "mobile-detect": "^1.3.6",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
     "react-scripts": "1.0.10",
     "winston": "^2.3.1"
   },
