--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "winston": "^2.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "react-scripts start",
     "build": "react-scripts build && cp public/resume.pdf build/",
     "test": "mocha test",
     "eject": "react-scripts eject",
-    "serve": "node server"
+    "start": "node server"
   },
   "devDependencies": {
     "chai": "^4.0.2",
