--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,20 @@
 language: node_js
 node_js: 8.1.2
+addons:
+  ssh_known_hosts: <deploy-host>
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in id_rsa.enc -out /tmp/id_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/id_rsa
+- ssh-add /tmp/id_rsa
 before_script:
-  - yarn build
+- yarn build
+before_install:
+- openssl aes-256-cbc -K $encrypted_b8f58f619ede_key -iv $encrypted_b8f58f619ede_iv
+  -in id_rsa.enc -out id_rsa -d
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: . scripts/deploy.sh
+  on:
+    branch: master
