--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: 8.1.2
 addons:
   ssh_known_hosts: <deploy-host>
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in id_rsa.enc -out /tmp/id_rsa -d
+- openssl aes-256-cbc -K $encrypted_b8f58f619ede_key -iv $encrypted_b8f58f619ede_iv -in id_rsa.enc -out /tmp/id_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/id_rsa
 - ssh-add /tmp/id_rsa
