--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: node_js
 node_js: 8.1.2
+
+branches:
+  only:
+    - master
+    - dev
+
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_b8f58f619ede_key -iv $encrypted_b8f58f619ede_iv -in id_rsa.enc -out /tmp/id_rsa -d
 - eval "$(ssh-agent -s)"
