--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "mocha test",
     "eject": "react-scripts eject",
-    "start": "node server"
+    "start": "react-scripts build && node server"
   },
   "devDependencies": {
     "chai": "^4.0.2",
